# mecagent-technical-test-main

./: .gitignore  PROJECT_PROGRESS_REPORT.md  README.md  app.py  colab_training.py  good_luck.ipynb  pyproject.toml  requirements.txt  train_cpu.py
old_versions/: app_fixed.py  app_local.py  app_stable.py  train_glm_cad.py  train_space.py
